--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     />
-    <script src="https://cd.jsdeliver.net/npm/dayjs@1.11.3/dayjs.min.js"
+    <!-- <script src="https://cd.jsdeliver.net/npm/dayjs@1.11.3/dayjs.min.js"
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO)wauy76x7U="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
